--- a/src/main/webapp/css/list.css
+++ b/src/main/webapp/css/list.css
@@ -14,10 +14,12 @@ h1 {
 
 .jumbotron {
 	width:100%;
-	background-image: url("/crypto/img/cryptocurrencies.jpg");
-	background-size: cover;
+	background-color: rgb(6,27,44);
 }
 
+label {
+	color: white;
+}
 
 @media only screen and (min-width: 768px) {
 	h1 {
