--- a/src/main/webapp/css/list.css
+++ b/src/main/webapp/css/list.css
@@ -21,6 +21,14 @@ label {
 	color: white;
 }
 
+.fa-arrow-up {
+	color: green;
+}
+
+.fa-arrow-down {
+	color: red;
+}
+
 @media only screen and (min-width: 768px) {
 	h1 {
 		font-size: 2.5em;
