--- a/src/main/webapp/css/list.css
+++ b/src/main/webapp/css/list.css
@@ -14,11 +14,18 @@ h1 {
 
 .jumbotron {
 	width:100%;
-	background-color: rgb(6,27,44);
+	background-image: url("/crypto/img/wave.svg");
+	background-size: cover;
 }
 
-label {
-	color: white;
+img {
+	width: 25px;
+	height: 25px; 
+}
+
+
+.fa-plus-circle {
+	color: green;
 }
 
 .fa-arrow-up {
